Fix max height bug on tablet for mission panel

--- a/src/web/jcc/client/style/CommandControl.less
+++ b/src/web/jcc/client/style/CommandControl.less
@@ -1352,8 +1352,7 @@ div.closeButton {
 }
 
 #runList {
-  // 77.31px = mission panel command strip, 22.91px = heading, 36px = measured buffer
-  max-height: calc(95vh - @top-toolbar-height - 77.31px - 22.91px - 36px);
+  max-height: calc(95vh - 303px);
   overflow-y: auto;
 }
 
